--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INSFORA - Together for Change. Together for Direction.</title>
     <meta name="description" content="A youth-led nonprofit committed to inspiring, supporting, and empowering underprivileged children through education, awareness, and research." />
